<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/credentials_container"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

        <EditText
            android:hint="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guard_container"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_guard_text"
            android:id="@+id/textView"
            android:layout_margin="5dp" />

        <EditText
            android:hint="@string/login_guard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guard"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_machine_text"
            android:id="@+id/textView2"
            android:layout_margin="5dp" />

        <EditText
            android:hint="@string/login_machine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/machine"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/authenticate"
        android:layout_gravity="right"
        android:layout_margin="5dp" />

</LinearLayout>